<resources>
    <string name="app_name">mvpclean</string>
    <string name="title_home">홈</string>
    <string name="title_upload">업로드</string>
    <string name="title_shopping">쇼핑</string>
    <string name="title_noti">알림</string>
    <string name="title_profile">프로필</string>
    <string name="top_category_home">홈</string>
    <string name="top_category_brand">브랜드</string>
    <string name="top_category_female">여성</string>
    <string name="top_category_male">남성</string>
    <string name="top_category_sale">세일</string>
    <string name="error_msg">Error!</string>
    <string name="empty_string">Empty Data!!</string>
    <string name="no_child_string">No Child Category</string>
    <string name="total_title_cloth">전체의류</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="offline_message">offline</string>
</resources>
