<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_shopping"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_shopping" />
    <item
        android:id="@+id/navigation_upload"
        android:icon="@drawable/ic_baseline_cloud_upload_24px"
        android:title="@string/title_upload" />


    <item
        android:id="@+id/navigation_noti"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_noti" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_baseline_perm_identity_24px"
        android:title="@string/title_profile" />

</menu>
